--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Progress Circles</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
     <header class="header">
@@ -15,8 +15,14 @@
         </h1>
     </header>
     <div class="main-content">
-        <!-- Круги и текст удалены -->
+        <button class="popup-button">Изменить монету</button>
+        <div class="balance-container">
+            <p class="balance-text">Баланс монет: <span id="coin-balance">0</span></p>
+        </div>
+        <div class="clickable-photo-container">
+            <img class="clickable-photo" src="images/GM.png" alt="Clickable Photo">
+        </div>
     </div>
-    <script src="script.js"></script>
+    <script src="scripts/script.js"></script>
 </body>
 </html>
